--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>task_0_package</name>
+  <name>SR_task_0</name>
   <version>0.0.0</version>
   <description>The task_0 package</description>
 
